force-app/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CTCM__Payment_Reporting_Codes__c</fullName>
        <description>Will be used for the NON SEPA payment file (&lt;RgltryRptg&gt;&lt;Dtls&gt;&lt;Cd&gt;14&lt;/Cd&gt;&lt;Inf&gt;Export/import of goods&lt;/Inf&gt;&lt;/Dtls&gt;&lt;/RgltryRptg&gt;)</description>
        <inlineHelpText>If populated (&lt;RgltryRptg&gt;&lt;Dtls&gt;&lt;Cd&gt;14&lt;/Cd&gt;&lt;Inf&gt;Export/import of goods&lt;/Inf&gt;&lt;/Dtls&gt;&lt;/RgltryRptg&gt;) will be added to the NON SEPA Payment file</inlineHelpText>
        <label>Payment Reporting Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>14:Export/import of goods</fullName>
                </value>
                <value>
                    <fullName>26:Rent</fullName>
                </value>
                <value>
                    <fullName>29:Other export/import of services</fullName>
                </value>
                <value>
                    <fullName>31:Interest</fullName>
                </value>
                <value>
                    <fullName>35:Dividend</fullName>
                </value>
                <value>
                    <fullName>38:Other return on capital</fullName>
                </value>
                <value>
                    <fullName>41:Buying/selling real estate and other rights abroad</fullName>
                </value>
                <value>
                    <fullName>43:Direct investments in stocks etc.</fullName>
                </value>
                <value>
                    <fullName>45:Direct investments in other capital</fullName>
                </value>
                <value>
                    <fullName>51:Portfolio investment in stocks and units in securities funds</fullName>
                </value>
                <value>
                    <fullName>52:Portfolio investment in bonds and certificate</fullName>
                </value>
                <value>
                    <fullName>53:Portfolio investment in derivatives</fullName>
                </value>
                <value>
                    <fullName>71:Life insurance/pension</fullName>
                </value>
                <value>
                    <fullName>79:Other financial investments</fullName>
                </value>
                <value>
                    <fullName>81:Salary</fullName>
                </value>
                <value>
                    <fullName>82:Inheritance/donation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCM__QR_IBAN__c</fullName>
        <label>QR-IBAN</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Structured_Address_for_QR_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Structured Address for QR Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__Balance_Sheet_GLA_Prepaid_Expenses__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Balance Sheet GLA Prepaid Expenses</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts (Balance Sheet GLA Prepaid Expenses)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__CompanyRegistrationNumber__c</fullName>
        <label>Company Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Peppol_Identifier__c</fullName>
        <inlineHelpText>Your peppol id to use peppol network, can be VAT number , IBAN etc depending on the peppol scheme you chose.</inlineHelpText>
        <label>Peppol Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Peppol_schemes__c</fullName>
        <inlineHelpText>Public identifier schemes for European Peppol network to identify the customer to send the invoices to</inlineHelpText>
        <label>Peppol schemes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD:VAT</fullName>
                </value>
                <value>
                    <fullName>AL:VAT</fullName>
                </value>
                <value>
                    <fullName>AT:CID</fullName>
                </value>
                <value>
                    <fullName>AT:GOV</fullName>
                </value>
                <value>
                    <fullName>AT:KUR</fullName>
                </value>
                <value>
                    <fullName>AT:VAT</fullName>
                </value>
                <value>
                    <fullName>BA:VAT</fullName>
                </value>
                <value>
                    <fullName>BE:VAT</fullName>
                </value>
                <value>
                    <fullName>BE:CBE</fullName>
                </value>
                <value>
                    <fullName>BG:VAT</fullName>
                </value>
                <value>
                    <fullName>CH:VAT</fullName>
                </value>
                <value>
                    <fullName>CY:VAT</fullName>
                </value>
                <value>
                    <fullName>CZ:VAT</fullName>
                </value>
                <value>
                    <fullName>DE:VAT</fullName>
                </value>
                <value>
                    <fullName>DE:LWID</fullName>
                </value>
                <value>
                    <fullName>DK:CPR</fullName>
                </value>
                <value>
                    <fullName>DK:CVR</fullName>
                </value>
                <value>
                    <fullName>DK:P</fullName>
                </value>
                <value>
                    <fullName>DK:SE</fullName>
                </value>
                <value>
                    <fullName>DK:VANS</fullName>
                </value>
                <value>
                    <fullName>DUNS</fullName>
                </value>
                <value>
                    <fullName>EE:VAT</fullName>
                </value>
                <value>
                    <fullName>ES:VAT</fullName>
                </value>
                <value>
                    <fullName>EU:REID</fullName>
                </value>
                <value>
                    <fullName>EU:VAT</fullName>
                </value>
                <value>
                    <fullName>FI:OVT</fullName>
                </value>
                <value>
                    <fullName>FR:SIRENE</fullName>
                </value>
                <value>
                    <fullName>FR:SIRET</fullName>
                </value>
                <value>
                    <fullName>GB:VAT</fullName>
                </value>
                <value>
                    <fullName>GLN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTPISA__VendorBaseDate1__c</fullName>
        <inlineHelpText>Used for Invoice Scan invoices.</inlineHelpText>
        <label>Vendor Base Date 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTPISA__VendorDaysOffset1__c</fullName>
        <inlineHelpText>Used for Invoice Scan invoices.</inlineHelpText>
        <label>Vendor Days Offset 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__VendorEmails_Cc_for_InvoiceScanRejection__c</fullName>
        <inlineHelpText>We can add multiple emails with comma separated</inlineHelpText>
        <label>VendorEmails Cc for InvoiceScanRejection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CampusAnticipated_Graduates_Current_Year__c</fullName>
        <description>Anticipated graduates for the current year per Campus</description>
        <label>Anticipated Graduates - Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campus_Anticipated_Graduates_Next_year__c</fullName>
        <description>Anticipated graduates for next year per campus</description>
        <label>Anticipated Graduates - Next year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campus_National_Students__c</fullName>
        <description>Percentage of National Students for separate campuses</description>
        <label>% National Students</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campus_Number_of_Student_Nationalities__c</fullName>
        <description>Number of student nationalities per campus</description>
        <label>Number of Student Nationalities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campus_Number_of_Students_EarlyChildhood__c</fullName>
        <description>Number of Students for each campus</description>
        <label>Number of Students-Early Childhood</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campus_Percent_of_International_Students__c</fullName>
        <description>Percentage of international students per campus</description>
        <label>% of International Students</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campus_Related_School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field makes it possible to add a related list to the Parent School Account which shows the related Campuses.</description>
        <label>Related School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campuses</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campus_Student_Enrolment__c</fullName>
        <label>Student Enrolment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_Address__c</fullName>
        <formula>CASE(ShippingCountryCode , &quot;MA&quot;, &quot;Middle East&quot;, &quot;AG&quot;, &quot;Middle East&quot;,&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_date_opportunity__c</fullName>
        <label>Closed date opportunity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments_on_Payment_Status__c</fullName>
        <label>Comments on Payment Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentIAC__c</fullName>
        <formula>Aggregate_Result__r.CurrentIAC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IAC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentSSA__c</fullName>
        <formula>Aggregate_Result__r.CurrentSSA__c</formula>
        <label>SSA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Academic_Year_Figures__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Academic Year Figures</label>
        <referenceTo>Annual_Figures__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_School_AYF_Update_form_schools__c</fullName>
        <formula>HYPERLINK(&quot;https://survey.cois.org/s3/School-Academic-Year-Figures-Update?Id=&quot; &amp;  Current_Academic_Year_Figures__r.Id  , &quot;Current Academic Year Figures Update Form&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current School AYF Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_University_AYF_Update__c</fullName>
        <formula>HYPERLINK(&quot;https://survey.cois.org/s3/University-Academic-Year-Figures-Update?Id=&quot; &amp;  Current_Academic_Year_Figures__r.Id , &quot;Current Academic Year Figures Update Form&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current University AYF Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curriculum_Programme_Evaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is also used in the Alchemer form School Membership Eligibility Application</description>
        <inlineHelpText>By external authority</inlineHelpText>
        <label>Curriculum Programme Evaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diplomas_and_End_Qualifications__c</fullName>
        <inlineHelpText>List all that apply. For example, Bachillerato, French Baccalaureate, German Abitur, US High School Diploma</inlineHelpText>
        <label>Diplomas and End Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_describing_gov_ow_e__c</fullName>
        <label>Document describing gov/own/lead</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DonorApi__Accepts_Unsolicited_Proposals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not philanthropic entities accept unsolicited proposals.</description>
        <inlineHelpText>Indicates whether or not philanthropic entities accept unsolicited proposals.</inlineHelpText>
        <label>Accepts Unsolicited Proposals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Active_Recurring_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated Fields** Automatically flagged to true when the account is related to an active recurring gift.</description>
        <inlineHelpText>**System Calculated Fields** Automatically flagged to true when the account is related to an active recurring gift.</inlineHelpText>
        <label>Active Recurring Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Annual_Giving_Total__c</fullName>
        <description>A range of values available to quickly classify philanthropic entities by annual giving totals to all grantees. Useful for projecting grant application amounts.</description>
        <inlineHelpText>A range of values available to quickly classify philanthropic entities by annual giving totals to all grantees. Useful for projecting grant application amounts.</inlineHelpText>
        <label>Annual Giving Total</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than $100k</fullName>
                </value>
                <value>
                    <fullName>$100k - $500k</fullName>
                </value>
                <value>
                    <fullName>$500k - $1mil.</fullName>
                </value>
                <value>
                    <fullName>$1mil. - $3mil.</fullName>
                </value>
                <value>
                    <fullName>$3mil. - $5mil.</fullName>
                </value>
                <value>
                    <fullName>$5mil. - $10mil.</fullName>
                </value>
                <value>
                    <fullName>$10mil. - $25mil.</fullName>
                </value>
                <value>
                    <fullName>$25mil. - $50mil.</fullName>
                </value>
                <value>
                    <fullName>$50mil. - $100mil.</fullName>
                </value>
                <value>
                    <fullName>$100mil. - $500mil.</fullName>
                </value>
                <value>
                    <fullName>More than $500mil.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Auto_Calculate_Household_Greetings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If flagged as true the account will automatically update the household greetings based on DonorNation&apos;s default household greeting format.</description>
        <inlineHelpText>If flagged as true the account will automatically update the household greetings based on DonorNation&apos;s default household greeting format.</inlineHelpText>
        <label>Auto Calculate Household Greetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Classification__c</fullName>
        <description>Classifies the account as a business organization or household.</description>
        <inlineHelpText>Classifies the account as a business organization or household.</inlineHelpText>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Household</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Do_Not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not solicit this organization for donations/grants.</description>
        <inlineHelpText>Do not solicit this organization for donations/grants.</inlineHelpText>
        <label>Do Not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__First_Gift_Date__c</fullName>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Funding_Cycle__c</fullName>
        <description>Indicates how often a philanthropic entity accepts LOIs/Proposals.</description>
        <inlineHelpText>Indicates how often a philanthropic entity accepts LOIs/Proposals.</inlineHelpText>
        <label>Funding Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Biannual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Gift_Opportunities__c</fullName>
        <description>**System Calculated Field** Counts the number of related gift opportunities.</description>
        <inlineHelpText>**System Calculated Field** Counts the number of related gift opportunities.</inlineHelpText>
        <label>Gift Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gifts_Outstanding__c</fullName>
        <description>**System Calculated Field** Summarizes the total amount of all related gifts with a status of &quot;Scheduled&quot;.</description>
        <inlineHelpText>**System Calculated Field** Summarizes the total amount of all related gifts with a status of &quot;Scheduled&quot;.</inlineHelpText>
        <label>Gifts Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gifts_Received__c</fullName>
        <description>**System Calculated Field** Summarizes the total amount of all related gifts with a status of &quot;Collected&quot;.</description>
        <inlineHelpText>**System Calculated Field** Summarizes the total amount of all related gifts with a status of &quot;Collected&quot;.</inlineHelpText>
        <label>Gifts Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gifts_Value__c</fullName>
        <formula>DonorApi__Gifts_Received__c + DonorApi__Gifts_Outstanding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gifts Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gives_Anonymously__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not philanthropic entities give anonymously for ALL Donations associated with them.</description>
        <inlineHelpText>Indicates whether or not philanthropic entities give anonymously for ALL Donations associated with them.</inlineHelpText>
        <label>Gives Anonymously</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Has_Open_Gift_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated Field** Automatically flagged to true when the account has an open gift opportunity.</description>
        <inlineHelpText>**System Calculated Field** Automatically flagged to true when the account has an open gift opportunity.</inlineHelpText>
        <label>Has Open Gift Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Household_Default_Greeting_Type__c</fullName>
        <description>*DO NOT CHANGE*</description>
        <inlineHelpText>*DO NOT CHANGE*</inlineHelpText>
        <label>Household Default Greeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Household Informal Greeting</fullName>
                    <default>true</default>
                    <label>Household Informal Greeting</label>
                </value>
                <value>
                    <fullName>Household Formal Greeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Household_Default_Greeting__c</fullName>
        <description>**System Calculated Field** Automatically sets the default greeting for the household based upon the selected value in the Household Default Greeting Type picklist.</description>
        <formula>IF(ISPICKVAL(DonorApi__Household_Default_Greeting_Type__c,&quot;Household Informal Greeting&quot;), DonorApi__Household_Informal_Greeting__c, 
IF(ISPICKVAL(DonorApi__Household_Default_Greeting_Type__c,&quot;Household Formal Greeting&quot;), DonorApi__Household_Formal_Greeting__c, DonorApi__Household_Informal_Greeting__c))</formula>
        <inlineHelpText>**System Calculated Field** Automatically sets the default greeting for the household based upon the selected value in the Household Default Greeting Type picklist.</inlineHelpText>
        <label>Household Default Greeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Household_Email__c</fullName>
        <label>Household Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DonorApi__Household_Formal_Greeting__c</fullName>
        <label>Household Formal Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Household_Informal_Greeting__c</fullName>
        <label>Household Informal Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Largest_Gift__c</fullName>
        <description>**System Calculated Field** Calculates the largest gift amount from all related gifts.</description>
        <inlineHelpText>**System Calculated Field** Calculates the largest gift amount from all related gifts.</inlineHelpText>
        <label>Largest Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Last_Gift_Amount__c</fullName>
        <description>**System Calculated Field** Calculates the amount of the last gift from the account&apos;s related gifts list.</description>
        <inlineHelpText>**System Calculated Field** Calculates the amount of the last gift from the account&apos;s related gifts list.</inlineHelpText>
        <label>Last Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Last_Gift_Date__c</fullName>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Matches_Employee_Giving__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this organization match employee gifts?</description>
        <inlineHelpText>Does this organization match employee gifts?</inlineHelpText>
        <label>Matches Employee Giving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Next_Funding_Cycle_Month__c</fullName>
        <description>What is the (next) month a proposal/LOI is due to this philanthropic entity?</description>
        <inlineHelpText>What is the (next) month a proposal/LOI is due to this philanthropic entity?</inlineHelpText>
        <label>Next Funding Cycle Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Num_Open_Gift_Opportunities__c</fullName>
        <description>**System Calculated Field** Calculates the total number of open gift opportunities related to the account.</description>
        <inlineHelpText>**System Calculated Field** Calculates the total number of open gift opportunities related to the account.</inlineHelpText>
        <label>Num Open Gift Opportunities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DonorApi__Organizational_Recognition_Name__c</fullName>
        <description>If this organization/philanthropic entity gives anonymously, or preferrs to be recognized by a different name in donor acknowledgement materials, what is it?</description>
        <inlineHelpText>If this organization/philanthropic entity gives anonymously, or preferrs to be recognized by a different name in donor acknowledgement materials, what is it?</inlineHelpText>
        <label>Organizational Recognition Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Primary_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary relationship manage for this con..... to be done later.</inlineHelpText>
        <label>Primary Relationship Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary Relationship Manager)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Educator_Recruitment_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Educator Recruitment Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Educator Recruitment Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ending_Month__c</fullName>
        <description>Academic ending month</description>
        <label>Ending Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Accreditation__c</fullName>
        <inlineHelpText>Information collected about additional Accreditations held by the school.
This is self-reported by the school and not maintained by CIS.</inlineHelpText>
        <label>External Accreditation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cognia</fullName>
                </value>
                <value>
                    <fullName>Middle States Association (MSA)</fullName>
                </value>
                <value>
                    <fullName>New England Association (NEASC)</fullName>
                </value>
                <value>
                    <fullName>Western Association (WASC)</fullName>
                </value>
                <value>
                    <fullName>Council of British Int. Schools (COBIS)</fullName>
                </value>
                <value>
                    <fullName>British Schools Overseas (BSO)</fullName>
                </value>
                <value>
                    <fullName>ONESQA (Thailand education agency)</fullName>
                </value>
                <value>
                    <fullName>Abu Dhabi Department of Education and Knowledge (ADEC)</fullName>
                </value>
                <value>
                    <fullName>Education Standards Board of South Australia</fullName>
                </value>
                <value>
                    <fullName>Knowledge and Human Development Authority (KHDA)</fullName>
                </value>
                <value>
                    <fullName>Ministry of Education, Singapore</fullName>
                </value>
                <value>
                    <fullName>Ministry of Education, Culture, Sports, Science and Technology (MEXT)</fullName>
                </value>
                <value>
                    <fullName>New South Wales Education Standards Authority (NESA)</fullName>
                </value>
                <value>
                    <fullName>Office for Standards in Education, Children’s Services and skills (Ofsted)</fullName>
                </value>
                <value>
                    <fullName>The Victorian Registration and Qualifications Authority (VRQA)</fullName>
                </value>
                <value>
                    <fullName>Fieldwork Education</fullName>
                    <isActive>false</isActive>
                    <label>Fieldwork Education</label>
                </value>
                <value>
                    <fullName>Independent Schools Inspectorate (ISI)</fullName>
                    <isActive>false</isActive>
                    <label>Independent Schools Inspectorate (ISI)</label>
                </value>
                <value>
                    <fullName>NCCT (China education agency)</fullName>
                    <isActive>false</isActive>
                    <label>NCCT (China education agency)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>